HEAD
	+ Bug fix: keep menu folders open during page reloads
	+ Bug fix: enable the log events dispatcher by default now works
	+ Bug fix: fixed _lock function in EBox::Module::Base
1.3.14
	+ Bug fix: fix critical bug in migration helper that caused some log
	  log tables to disappear
	+ Create events table
	+ Bug fix: log watcher works again
	+ Bug fix: delete cache if log index is not found as it could be
	  disabled
1.3.13
	+ Bug fix: critical error in EventDaemon that prevented properly start
	+ Cron script for manage logs does not run if another is already
	  running, hope that this will avoid problems with large logs
	+ Increased maximum size of message field in events
	+ Added script to purge logs
	+ Bug fix: multi-domain logs can be enabled again
1.3.12
	+ Added type for EBox::Dashboard::Value to stand out warning
	  messages in dashboard
	+ Added EBox::MigrationHelpers to include migration helpers, for now,
	  include a db table renaming one
	+ Bug fix: Fix mismatch in event table field names
	+ Bug fix: Add migration to create language plpgsql in database
	+ Bug fix: Add missing script for report log consolidation
	+ Bug fix: Don't show modules in logs if they are not configured. This
	  prevents some crashes when modules need information only available when
	  configured, such as mail which holds the vdomains in LDAP
	+ Added method EBox::Global::lastModificationTime to know when
	  eBox configuration was modified for last time
	+ Add support for breadcrumbs on the UI
	+ Bug fix: in Loggerd files are only parsed one time regardless of
	  how many LogHelper reference them
	+ Added precondition for Loggerd: it does not run if there isnt
	anything to watch
1.3.11
	+ Support customFilter in models for big tables
	+ Added EBox::Events::sendEvent method to send events using Perl
	  code (used by ebackup module)
	+ Bug fix: EBox::Type::Service::cmp now works when only the
	  protocols are different
	+ Check $self is defined in PgDBEngine::DESTROY